# wFaaS

./: Dockerfile  README.md
container/: Cargo.toml  Dockerfile  container.py  main.py  proxy.py  proxy.rs
function/: container.py  functionInfo.py  functionManager.py  functionSet.py  functionUnit.py  portController.py  test.py  test.sh
vFaaS/: CMakeLists.txt  WorkerPool.hpp  WorkerUnit.hpp  build.sh  main.cpp  native.hpp  proxy_exe  test.py  test.sh  test.txt  utils.cpp  utils.hpp  worker_exe
vFaaS/include/: utils.cpp  utils.hpp
vFaaS/proxy/: CMakeLists.txt  LocalStorage.hpp  WorkerPool.hpp  WorkerUnit.hpp  build.sh  proxy.cpp  test.py
vFaaS/wasmCode/: build.sh  func.config  host_interface.hpp  main.c  main.cpp  test.wasm
vFaaS/worker/: CMakeLists.txt  build.sh  functionConfig.hpp  main.cpp  native.hpp  utils.cpp  utils.hpp  worker.cpp  worker.hpp
